tests/NormalTests/paczka1/fuzzy1/89992315.err
Error in line 2: yp62cwLd A204 28,3
Error in line 6: A271 A685 46,8
Error in line 4: s0V S779 75,7
Error in line 32: waHyYDlNCT S779 1,4
Error in line 29: bvWUm1YE2kr S779 31,3
